organized the custom style page, everything looks to still work

--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -1,10 +1,91 @@
-﻿/*Sets the top Westland Banner, at fixed height*/
+﻿/*****Styling for universal markup******/
+
+/*The side nav title heads*/
+/*doesnt seem to be in effect*/
+/*h2 {
+    font-size: 16px;
+    margin-left: 10px;
+}*/
+
+/*the results status line*/
+h4 {
+    text-align: center;
+}
+
+/*affects the policies list entries (cate/doctype are overruled)*/
+li {
+    font-size: 16px;
+}
+
+    /*Affects the individual list items*/
+    li a {
+        display: block;
+        color: #000;
+        padding: 5px;
+    }
+
+        /* Change the link color on hover */
+        li a:hover {
+            background-color: #555;
+            color: white;
+            text-decoration: none;
+        }
+
+/*Table design*/
+
+/*this is affecting the inner misc table*/
+table {
+    width: 100%;
+    table-layout: auto;
+    border-collapse:collapse;
+}
+
+    th, td {
+        /*may not be used*/
+        /*padding-left: 5px;
+        padding-right: 5px;*/
+        text-align: center;
+        font-size: 16px;
+        border: 1px solid black !important; /*needs important to overrule grey table look*/
+
+    }
+
+    /*makes th not wrap*/
+    th {
+        white-space:nowrap;
+    }
+        
+        /*makes the column sorter links appear black like the rest of column headers*/
+        th a {
+            color: inherit;
+        }
+
+    /*this makes the row highlighting disappear, not sure if I want*/
+    /*td {
+        background: white;
+    }*/
+
+/*dont think its affecting anything*/
+/*form {
+    margin-right: 10px;
+}*/
+
+    /*Affects the Search box text*/
+    form input {
+        text-align: center;
+    }
+
+
+/*****Tags from the master page******/
+/*Sets the top Westland Banner, at fixed height*/
 header {  
     background: url(../Images/logo.png) no-repeat bottom;
     background-color: #26728a;
     height: 10vh;
 }
 
+
+/*****Tags from the PublicVM.Index page******/
 /*Makes the nav height to match remaining screen height, breaks for mobile*/
 #public_navigation {
     background-color: lightgrey;
@@ -14,162 +95,206 @@ header {
     padding: 0;
 }
 
-/*make the nav button have some margin, while list has none*/
-.nav-button {
-    margin-top: 5%;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-bottom: 5%;
-    height: 5%;
-}
-    .nav-button * {
-        font-size: 1vw;
-        font-weight: bold;
-        padding: 0;
+    /*make the nav-cat/poly switcher have some margin, while list has none*/
+    .nav-button {
+        margin-top: 5%;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-bottom: 5%;
+        height: 5%;
+    }
+        /*affects the categories/policies span texts */
+        .nav-button * {
+            font-size: 1vw;
+            font-weight: bold;
+            padding: 0;
+            margin: 0;
+        }
+
+        /*div for category/policy switcher*/
+        .cat_pol_switcher{
+            padding: 0;
+        }
+
+            /* The switch control appearance*/
+            .switch {
+                position: relative; 
+                width: 60px;
+                height: 34px;
+            }
+                /* Hide default HTML checkbox */
+                .switch input {display:none;}
+
+                /* The slider back area*/
+                .slider {
+                    position: absolute;
+                    cursor: pointer;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    background-color: black;
+                    -webkit-transition: .4s;
+                    transition: .4s;
+                }
+
+                    /*the slider white circle*/
+                    .slider:before {
+                        position: absolute;
+                        content: "";
+                        height: 26px;
+                        width: 26px;
+                        left: 4px;
+                        bottom: 4px;
+                        background-color: white;
+                        -webkit-transition: .4s;
+                        transition: .4s;
+                    }
+
+                    /*Slider changed color*/
+                    input:checked + .slider {
+                        background-color: #2196F3;
+                    }
+
+
+                    /*The Slider Movement Animation*/
+                    input:checked + .slider:before {
+                        -webkit-transform: translateX(26px);
+                        -ms-transform: translateX(26px);
+                        transform: translateX(26px);
+                    }
+
+                    /* Outer Rounded slider part */
+                    .slider.round {
+                        border-radius: 34px;
+                    }
+
+                    /* Inner Rounded slider part */
+                    .slider.round:before {
+                        border-radius: 50%;
+                    }
+
+    /*affects the overall list box*/
+    .nav_lists_outer {
+        /*overflow-y: hidden; Makes #outer contain its floated children */
         margin: 0;
+        width: 100%;
+        height: 80%;
     }
 
+        /*The nav lists and it's title*/
+        .nav_lists{
+            padding-left: 0;
+            padding-right: 0;
+            width: inherit;
+            height: 100%;
+        }
 
-/*Needed to allow a scrollable policy list if needed*/
-#policy_section {
-    height: 100%;
-    width: auto; /*might not be needed*/
-}
+            /*Affects the nav bar list, as well as the pagedList*/
+            .nav_lists ul{
+                /*float: left; NOT DOING ANYTHING. Make this div as wide as its contents */
+                /* Colours and borders for illustration purposes */
+                width: inherit;
+                list-style-type: none;
+                font-size: 14px;
+                padding-left: 0px;
+                background-color: rgba(0, 161, 228, 0.4);
+            }
+
+            /*affects the cate/policy title*/
+            .nav_lists h2 {
+                font-size: 25px;
+                text-align: center;
+                margin: 10px;
+            }
+
+            /*affects the entire category background on hover of inside doctype*/
+            #category_list > li:hover,  #category_list > li li:hover{
+                background-color: #555;
+
+            }
+
+            /*affects the category names*/
+            .category_nav > div > a {
+                font-size: 20px;
+                font-weight: bold;
+            }
+
+            /*DocType sublist item font adjustments*/
+            #docType_list li a{
+                font-size: 16px;
+                padding-left: 20px;
+            }
+
+            /*Needed to allow a scrollable policy list if needed*/
+            #policy_section {
+                height: 100%;
+                width: auto; /*might not be needed*/
+            }
+
+            /*Used to toggle which sub-bar to see*/
+            .hidden {
+                display: none;
+            }
+
+                /*Give a scroll to the ul policy list*/
+                #policy_list{
+                    width: 100%;
+                    height: inherit;
+                    overflow-y: scroll;
+                }
 
 /*Makes the main content height to match remaining screen height, breaks for mobile*/
+/*The main part of the content, which involves 'public' info, search bar, and date filters*/
 #public_info {
     height: 90vh;
     width: 75%;
     flex: auto;
     overflow-y:auto; /*Makes it that the parent div will adjust height to dynamic table height*/
-}
-
-/*Affects the nav bar list, as well as the pagedList*/
-.nav_lists ul{
-    list-style-type: none;
-    font-size: 14px;
-    padding-left: 0px;
-    background-color: rgba(0, 161, 228, 0.4);
-}
-
-/*Affects the individual list items*/
-li a {
-    display: block;
-    color: #000;
-    padding: 5px;
-}
-
-/* Change the link color on hover */
-li a:hover {
-    background-color: #555;
-    color: white;
-    text-decoration: none;
-}
-
-
-#category_list > li:hover,  #category_list > li li:hover{
-    background-color: #555;
-
-}
-
-.nav_cate_hover{
-    background-color: #555;
-    color: white;
-    text-decoration: none;
-    overflow: auto;
-    clear: both;
-}
-
-.active {
-    background-color: grey;
-    color: white;
-    overflow: hidden;
-    clear: both;
-}
-
-/*Used to toggle which sub-bar to see*/
-.hidden {
-    display: none;
-}
-
-/*The side nav title heads*/
-h2 {
-    font-size: 16px;
-    margin-left: 10px;
-}
-
-/*div for category/policy switcher*/
-.cat_pol_switcher{
-    padding: 0;
-}
-
-/* The switch control appearance*/
-.switch {
-    position: relative; 
-    width: 60px;
-    height: 34px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {display:none;}
-
-/* The slider back area*/
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: black;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-
-/*the slider white circle*/
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-
-/*Slider changed color*/
-input:checked + .slider {
-    background-color: #2196F3;
-}
-
-/*input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-}*/
-
-/*The Slider Movement Animation*/
-input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-}
-
-/* Outer Rounded slider part */
-.slider.round {
-    border-radius: 34px;
-}
-
-/* Inner Rounded slider part */
-.slider.round:before {
-    border-radius: 50%;
-}
-
-/*The main part of the content, which involves 'public' info, search bar, and date filters*/
-#public_info {
     background-color: white;
 }
 
+    /*Constant 'public' info display*/
+    .public_name_id {
+        height: 75px;
+        text-align: center;
+    }
+
+        /*affects the name and id status positioning*/
+        .public_name_id h3 {
+            position: absolute;
+            top: 25%;
+            left: 25%;
+        }
+
+    /*Gives the input boxes a better look*/
+    .filter {
+        text-align: center;
+        margin-bottom: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    /*Anchors with class 'button' changes (i.e. Clear Button)*/
+    a.button {
+
+        font-weight: 500;
+        font-family: sans-serif;
+        font-size: 17px;
+        text-decoration: none;
+        background-color: #EEEEEE;
+        color: #333333;
+        padding: 2px 6px 2px 6px;
+        border-top: 1px solid #CCCCCC;
+        border-right: 1px solid #333333;
+        border-bottom: 1px solid #333333;
+        border-left: 1px solid #CCCCCC;
+        margin-bottom: 10px;
+    }
+
+
+/*****Tags from the PublicVM._PublicTable page******/
 
 /*Default Table columns*/
 /*show 1, 2, 9, 10, 11*/
@@ -213,112 +338,45 @@ input:checked + .slider:before {
     display: none;
 }
 
-/*DocType sublist item font adjustments*/
-#docType_list li a{
-    font-size: 16px;
-    padding-left: 20px;
-}
-
-/*Anchors with class 'button' changes (i.e. Clear Button)*/
-a.button {
-     /*background: url(../Images/clear.png) no-repeat center;
-     display: block;
-     background-size: 60px 20px;
-     height: inherit;
-     text-indent: -9999px;*/
-
-    font-weight: 500;
-    font-family: sans-serif;
-    font-size: 17px;
-    text-decoration: none;
-    background-color: #EEEEEE;
-    color: #333333;
-    padding: 2px 6px 2px 6px;
-    border-top: 1px solid #CCCCCC;
-    border-right: 1px solid #333333;
-    border-bottom: 1px solid #333333;
-    border-left: 1px solid #CCCCCC;
-    margin-bottom: 10px;
-}
-
-/*Constant 'public' info display*/
-.public_name_id {
-    height: 75px;
-    text-align: center;
-}
-
-.public_name_id h3 {
-    position: absolute;
-    top: 25%;
-    left: 25%;
-}
-
-/*Table design*/
-table {
-    width: 100%;
-    table-layout: auto;
-    border-collapse:;
-}
-
-th, td {
-    padding-left: 5px;
-    padding-right: 5px;
-    text-align: center;
-    font-size: 16px;
-    border: 1px solid black !important;
-}
-
-th, .main-rows > td:nth-child(11) {
+/*not sure if working*/
+/*.main-rows > td:nth-child(11) {
     white-space:nowrap;
-}
+}*/
 
-td {
-    background: white;
-}
-
-th a {
-    color: inherit;
-}
-
-/*The nav lists and it's title*/
-.nav_lists{
-    padding-left: 0;
-    padding-right: 0;
-    width: inherit;
-    height: 100%;
-}
-
-    .nav_lists ul{
-        /*float: left; NOT DOING ANYTHING. Make this div as wide as its contents */
-        /* Colours and borders for illustration purposes */
-        width: inherit;
+    /*affects the description td records*/
+    .description {
+        max-width: 300px;
     }
 
-    .nav_lists h2 {
-        font-size: 25px;
-        text-align: center;
-        margin: 10px;
+    /*the pagination positioning*/
+    .pagedList {
+        margin-left: auto;
+        margin-right: auto;
     }
 
+        /*not sure if doing anything*/
+        /*.PagedList-pageCountAndLocation {
+            white-space:nowrap;
+        }*/
 
-.nav_lists_outer {
-    /*overflow-y: hidden; Makes #outer contain its floated children */
-    margin: 0;
-    width: 100%;
-    height: 80%;
-}
 
-/*Gives the input boxes a better look*/
-.filter {
-    text-align: center;
-    margin-bottom: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
+/*****Tags from the JS manipulation page******/
 
-li {
-    font-size: 16px;
+/*not sure if doing anything*/
+/*.nav_cate_hover{
+    background-color: #555;
+    color: white;
+    text-decoration: none;
+    overflow: auto;
+    clear: both;
+}*/
+
+/*gives style to current active navbar list item*/
+.active {
+    background-color: grey;
+    color: white;
+    overflow: hidden;
+    clear: both;
 }
 
 /*Preview Image sizing*/
@@ -329,45 +387,10 @@ li {
     max-height: 100px;    
 }
 
-h4 {
-    text-align: center;
-}
 
-/*Give a scroll to the ul policy list*/
-#policy_list{
-    width: 100%;
-    height: inherit;
-    overflow-y: scroll;
-}
+/*****Media Tags for alternating screen size******/
 
-form {
-    margin-right: 10px;
-}
-
-.category_nav > div > a {
-    font-size: 20px;
-    font-weight: bold;
-}
-
-
-.pagedList {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.pagination li{
-    /*display: inline;
-    float: left;*/
-}
-
-.PagedList-pageCountAndLocation {
-    white-space:nowrap;
-}
-
-form input {
-    text-align: center;
-}
-
+/*removes tables columns on shrinking size*/
 @media(max-width:767px){
     .main-rows > th:nth-child(1), .main-rows > td:nth-child(1), .main-rows > th:nth-child(3), .main-rows > td:nth-child(3), .main-rows > th:nth-child(4), .main-rows > td:nth-child(4), .main-rows > th:nth-child(5), .main-rows > td:nth-child(5), .main-rows > th:nth-child(6), .main-rows > td:nth-child(6), .main-rows > th:nth-child(7), .main-rows > td:nth-child(7), .main-rows > th:nth-child(8), .main-rows > td:nth-child(8), .main-rows > th:nth-child(11), .main-rows > td:nth-child(11) {
         display: none;
@@ -377,14 +400,3 @@ form input {
 @media(min-width:768px){}
 @media(min-width:992px){}
 @media(min-width:1200px){}
-
-/*.description {
-    width: 200px;
-    max-width: 400px;
-    height: 50px;
-    overflow: hidden;
-    white-space: nowrap;
-}*/
-.description {
-    max-width: 300px;
-}
