--- a/DocSearch2.1/Views/Shared/_Layout.cshtml
+++ b/DocSearch2.1/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">*@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr") <!--modernizr must be in head of script-->
+    <meta name="description" content="Westland's Archiving Document Search" />
 </head>
 <body>
     <header></header>
