--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -7,17 +7,20 @@
 <div id ="main-row" class="row">
     <nav id="public_navigation" class="navbar navbar-default col-md-2">
 
-        <div class="nav-button row">
-            <span class="col-md-5">Categories</span>
-            <div class="cat_pol_switcher col-md-4">
-                <!-- Rounded switch -->
-                <label class="switch">
-                    <input type="checkbox" id="category_policy_toggle">
-                    <div class="slider round"></div>
-                </label>
+        <div class="div-table">
+            <div class="nav-button row">
+                <span class="col-md-5">Categories</span>
+                <div class="cat_pol_switcher col-md-4">
+                    <!-- Rounded switch -->
+                    <label class="switch">
+                        <input type="checkbox" id="category_policy_toggle">
+                        <div class="slider round"></div>
+                    </label>
+                </div>
+                <span class="col-md-3">Policies</span>
             </div>
-            <span class="col-md-3">Policies</span>
         </div>
+
 
         <div class="nav_lists_outer row">
             <div class="nav_lists col-md-12">
