--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -119,7 +119,7 @@ header {
             /* The switch control appearance*/
             .switch {
                 position: relative; 
-                width: 60px;
+                width: 50px;
                 height: 34px;
             }
                 /* Hide default HTML checkbox */
@@ -159,9 +159,9 @@ header {
 
                     /*The Slider Movement Animation*/
                     input:checked + .slider:before {
-                        -webkit-transform: translateX(26px);
-                        -ms-transform: translateX(26px);
-                        transform: translateX(26px);
+                        -webkit-transform: translateX(16px);
+                        -ms-transform: translateX(16px);
+                        transform: translateX(16px);
                     }
 
                     /* Outer Rounded slider part */
@@ -277,7 +277,7 @@ header {
     }
 
     /*Anchors with class 'button' changes (i.e. Clear Button)*/
-    a.button {
+    a.button, #formSubmitId {
 
         font-weight: 500;
         font-family: sans-serif;
@@ -286,10 +286,10 @@ header {
         background-color: #EEEEEE;
         color: #333333;
         padding: 2px 6px 2px 6px;
-        border-top: 1px solid #CCCCCC;
-        border-right: 1px solid #333333;
-        border-bottom: 1px solid #333333;
-        border-left: 1px solid #CCCCCC;
+        border-top: 1px solid #000;
+        border-right: 1px solid #000;
+        border-bottom: 1px solid #000;
+        border-left: 1px solid #000;
         margin-bottom: 10px;
     }
 
@@ -423,7 +423,7 @@ header {
         /* The slider back area*/
         .slider {
             top: -20px;
-            left: 20px;
+            left: 10px;
             right: 10px;
             bottom: 0;
         }
@@ -440,4 +440,14 @@ header {
                 -ms-transform: translateY(20px);
                 transform: translateY(20px);
             }
+
+    /*affects the category names*/
+    .category_nav > div > a {
+        font-size: 15px;
+    }
+
+    /*DocType sublist item font adjustments*/
+    #docType_list li a{
+        font-size: 12px;
+    }
 }
