Fixed a small date format issue with display Issue Date

--- a/DocSearch2.1/Views/Home/Index.cshtml
+++ b/DocSearch2.1/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
 
     <h1>Enter the Client Id then Submit</h1>
     <h2>Ramin: 568801</h2>
+    <h2>Jackie Tester account with training2 server: 1435693</h2>
     <h2>Client Id with a picture: 1403635</h2>
     @Html.Label("ClientId", "Client Id ")
     @Html.TextBox("ClientId", 1186367);
