Fixed small issue where too much data shown for misc table Declaration/Endorsement

--- a/DocSearch2.1/Views/PublicVM/MiscData.cshtml
+++ b/DocSearch2.1/Views/PublicVM/MiscData.cshtml
@@ -52,7 +52,7 @@
 
         </table>
 
-        @if ((string)ViewData["currentNav"] == "doctype") {
+        @if ((string)ViewData["currentNav"] == "doctype" && (string)ViewData["currentNavTitle"] != "Declaration/Endorsement") {
             <br/>
             <table>
                 <tr>
