Started adding functionality to mass download files from one folder_ID.  This is PRE DotNetZip nugget download

--- a/DocSearch2.1/Views/Home/Index.cshtml
+++ b/DocSearch2.1/Views/Home/Index.cshtml
@@ -17,3 +17,14 @@
 
     <input type="submit" value="Submit" />
 }
+
+<br/><br />
+
+@using (Html.BeginForm("DownloadAllDocuments", "Folder", FormMethod.Get)) {
+    <h1>Download all files from this Folder</h1>
+
+    @Html.Label("ClientId", "Client Id ")
+    @Html.TextBox("ClientId", 1186367);
+
+    <input type="submit" value="Submit" />
+}
