Download all documents for one Folder badly done, but done.  Biggest issue is needs encoding for files as JPGS and most likely other file types will fail.  PDF, msgs seem fine.

--- a/DocSearch2.1/Views/Home/Index.cshtml
+++ b/DocSearch2.1/Views/Home/Index.cshtml
@@ -10,10 +10,11 @@
 
     <h1>Enter the Client Id then Submit</h1>
     <h2>Ramin: 568801</h2>
+    <h2>Mary: 1186367</h2>
     <h2>Jackie Tester account with training2 server: 1435693</h2>
     <h2>Client Id with a picture: 1403635</h2>
-    @Html.Label("ClientId", "Client Id ")
-    @Html.TextBox("ClientId", 1186367);
+    @Html.Label("ClientId", "Client Id")
+    @Html.TextBox("ClientId", 1435693);
 
     <input type="submit" value="Submit" />
 }
@@ -24,7 +25,7 @@
     <h1>Download all files from this Folder</h1>
 
     @Html.Label("ClientId", "Client Id ")
-    @Html.TextBox("ClientId", 1186367);
+    @Html.TextBox("ClientId", 1435693);
 
     <input type="submit" value="Submit" />
 }
