added comments for the massdocumentdownload functionality

--- a/DocSearch2.1/Views/Home/Index.cshtml
+++ b/DocSearch2.1/Views/Home/Index.cshtml
@@ -21,6 +21,7 @@
 
 <br/><br />
 
+@*Should eventually move this functionality into a role specific button/dropdown inside the main page*@
 @using (Html.BeginForm("DownloadAllDocuments", "Folder", FormMethod.Get)) {
     <h1>Download all files from this Folder</h1>
 
