--- a/DocSearch2.1/Views/PublicVM/MiscData.cshtml
+++ b/DocSearch2.1/Views/PublicVM/MiscData.cshtml
@@ -53,8 +53,7 @@
         </table>
 
         @if ((string)ViewData["currentNav"] == "doctype" && (string)ViewData["currentNavTitle"] != "Declaration/Endorsement") {
-            <br/>
-            <table>
+            <table class="ref_table">
                 <tr>
                     <th>Reference Number</th>
                     <th>Document Type</th>
