Fixed year date status issue with JS updateCurrentCount() default not working correctly

--- a/DocSearch2.1/Views/Home/Index.cshtml
+++ b/DocSearch2.1/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
     <h1>Download all files from this Folder</h1>
 
     @Html.Label("ClientId", "Client Id ")
-    @Html.TextBox("ClientId", 1435693);
+    @Html.TextBox("ClientId", 568801);
 
     <input type="submit" value="Submit" />
 }
