--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -76,17 +76,18 @@
                         var currentLowYear = $('#IssueYearMinRange option:selected').val();
                         var currentHighYear = $('#IssueYearMaxRange option:selected').val();
 
-
                         if (currentLowYear.length > 0) {
                             $('#currentLowYear').text(currentLowYear);
                         } else {
-                            $('#currentLowYear').text("2009");
+                            currentLowYear = $('#IssueYearMinRange option:eq(1)').val();
+                            $('#currentLowYear').text(currentLowYear);
                         }
 
                         if (currentHighYear.length > 0) {
                             $('#currentHighYear').text(currentHighYear);
                         } else {
-                            $('#currentHighYear').text("2017");
+                            currentHighYear = $('#IssueYearMaxRange option:last').val();
+                            $('#currentHighYear').text(currentHighYear);
                         }
 
                         $('#currentCount').text(currentCount);
