fixed table formatting for general purpose category desgined table as WAS stag2 was different from production WAS

--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -77,8 +77,10 @@
                         var currentHighYear = $('#IssueYearMaxRange option:selected').val();
 
                         if (currentLowYear.length > 0) {
+                            //takes user input
                             $('#currentLowYear').text(currentLowYear);
                         } else {
+                            //defaults back to original low
                             currentLowYear = $('#IssueYearMinRange option:eq(1)').val();
                             $('#currentLowYear').text(currentLowYear);
                         }
