--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -303,12 +303,16 @@ header {
     display: none;
 }
 
-/*show 1, 2, 9, 10*/
-/*hide 3, 4, 5, 6, 7, 8, 11*/
-/*Hides select columns when in subcategory - category*/
-.category .main-rows>th:nth-child(-4n + 11), .category .main-rows>td:nth-child(-4n + 11), .category .main-rows>th:nth-child(-4n + 8), .category .main-rows>td:nth-child(-4n + 8), .category .main-rows>th:nth-child(11), .category .main-rows>td:nth-child(11), .category .main-rows>th:nth-child(6), .category .main-rows>td:nth-child(6), .category .main-rows>th:nth-child(5), .category .main-rows>td:nth-child(5){
+/*show 1, 2, 5, 9, 10, 11*/
+/*hide 3, 4, 5, 6, 8*/
+.category .main-rows>th:nth-child(-4n+8), .category .main-rows>td:nth-child(-4n+8), .category .main-rows>th:nth-child(-3n+6), .category .main-rows>td:nth-child(-3n+6), .category .main-rows > th:nth-child(5), .category .main-rows > td:nth-child(5) {
     display: none;
 }
+
+/*Hides select columns when in subcategory - category*/
+/*.category .main-rows>th:nth-child(-4n + 11), .category .main-rows>td:nth-child(-4n + 11), .category .main-rows>th:nth-child(-4n + 8), .category .main-rows>td:nth-child(-4n + 8), .category .main-rows>th:nth-child(11), .category .main-rows>td:nth-child(11), .category .main-rows>th:nth-child(6), .category .main-rows>td:nth-child(6), .category .main-rows>th:nth-child(5), .category .main-rows>td:nth-child(5){
+    display: none;
+}*/
 
 /*2, 9, 10, 11*/
 /*1, 3, 4, 5, 6, 7, 8*/
