--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -293,6 +293,10 @@ header {
         margin-bottom: 10px;
     }
 
+    a.button:active {
+        /*Figure out how to immitate button animation*/
+}
+
 
 /*****Tags from the PublicVM._PublicTable page******/
 
