--- a/DocSearch2.1/Views/PublicVM/MiscData.cshtml
+++ b/DocSearch2.1/Views/PublicVM/MiscData.cshtml
@@ -67,7 +67,19 @@
                         <tr>
                             <td>@item.RefNumber</td>
                             <td>@item.RefNumberType_CD</td>
-                            <td>@item.Date1_DT</td>
+                            <td>
+                                @if (item.Date1_DT.HasValue)
+                                {
+                                    //DateTime d = item.Date1_DT.GetValueOrDefault(DateTime.Now).ToShortDateString;
+
+                                    //Dim d As Date = item.Date1_DT
+                                    //    @d.ToShortDateString
+                                    //var date = item.Date1_DT.Value.ToShortDateString();
+                                    var date = item.Date1_DT.Value.ToString("dd MMM yyyy");
+                                    @date;
+                                }
+                                @*item.Date1_DT*@
+                            </td>
                             <td>@item.Text1</td>
                         </tr>
                     }
