Added an admin button to create a session to check for admin.  also moved some navbar into a partial page to be used in the new admin side.

--- a/DocSearch2.1/Views/Home/Index.cshtml
+++ b/DocSearch2.1/Views/Home/Index.cshtml
@@ -16,7 +16,8 @@
     @Html.Label("ClientId", "Client Id")
     @Html.TextBox("ClientId", 568801);
 
-    <input type="submit" value="Submit" />
+    <input type="submit" name="Role" value="Submit" />
+    <input type="submit" name="Role" value="Admin" />
 }
 
 <br/><br />
