--- a/DocSearch2.1/Views/Home/Index.cshtml
+++ b/DocSearch2.1/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     <h2>Jackie Tester account with training2 server: 1435693</h2>
     <h2>Client Id with a picture: 1403635</h2>
     @Html.Label("ClientId", "Client Id")
-    @Html.TextBox("ClientId", 568801);
+    @Html.TextBox("ClientId", 1012504);
 
     <input type="submit" name="Role" value="Submit" />
     <input type="submit" name="Role" value="Admin" />
